--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc-watch --onSuccess \"node ./lib/index.js\"",
+    "start": "npx tsc-watch --onSuccess \"node --env-file=.env ./lib/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@tsconfig/recommended": "^1.0.13",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "firebase-admin": "^13.6.0",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^7.2.0",
     "typescript": "^5.9.3"
