--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "celebrate": "^15.0.3",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
