--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "celebrate": "^15.0.3",
     "express": "^5.1.0",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
