fix(orders): ajustar orderConverter para evitar erro de prototype no Firestore
- Remove chamadas a métodos de classe no toFirestore
- Calcula subtotal e total diretamente no converter
- Evita erro getSubtotal is not a function
- Garante persistência apenas de objetos literais

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "celebrate": "^15.0.3",
     "cpf-cnpj-validator": "^1.0.3",
+    "dayjs": "^1.11.19",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "file-type": "^21.1.1",
