--- a/functions/package.json
+++ b/functions/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "functions",
+  "name": "ecommerce-api",
+  "version": "1.0.0",
+  "exports": "./lib/index.js",
+  "type": "module",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "npx eslint .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "start": "npm run build && firebase emulators:start --only functions",
+    "deploy": "npm run lint && npm run swagger && npm run build && firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -15,10 +16,19 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "celebrate": "^15.0.3",
+    "cpf-cnpj-validator": "^1.0.3",
+    "dayjs": "^1.11.19",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "file-type": "^21.1.1",
+    "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-functions": "^7.0.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
