--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,17 +1,22 @@
 {
   "compilerOptions": {
     "module": "NodeNext",
-    "esModuleInterop": true,
-    "moduleResolution": "nodenext",
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "outDir": "lib",
-    "sourceMap": true,
+    "target": "es2022",
     "strict": true,
-    "target": "es2017"
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "rootDir": "src", // Diretório de códigos TypeScript
+    "outDir": "lib", // Diretório de saída para os arquivos compilados
+    "sourceMap": true, // Gera mapas de origem para facilitar o debug
+    "noImplicitAny": true, // Não permite declaração de variáveis ou parâmetros sem tipo
+    "noImplicitReturns": true, // Verifica se todas as funções possuem tipo de retorno informado
+    "noEmitOnError": true, // Não gera o código JS caso haja algum erro durante o processo de compilação
+    "strictNullChecks": true, // Força a verificação de valores null ou undefined
+    "noUnusedLocals": true, // Sinaliza quando existem variáveis declaradas e não utilizadas
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.spec.ts"]
 }
