--- a/functions/package.json
+++ b/functions/package.json
@@ -7,12 +7,13 @@
     "lint": "npx eslint .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "start": "npm run build && firebase emulators:start --only functions",
+    "swagger": "node swagger.js",
+    "start": "firebase emulators:start --only functions",
     "deploy": "npm run lint && npm run swagger && npm run build && firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "24"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
@@ -24,18 +25,21 @@
     "file-type": "^21.1.1",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.2"
+    "firebase-functions": "^7.0.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/express": "^5.0.5",
-    "@types/node": "^24.10.1",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
+    "@types/node": "^20.11.30",
+    "@types/swagger-ui-express": "^4.1.8",
+    "eslint": "^9.39.2",
+    "eslint-config-xo": "^0.49.0",
     "firebase-functions-test": "^3.4.1",
-    "typescript": "^5.7.3"
+    "globals": "^17.0.0",
+    "swagger-autogen": "^2.23.7",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.51.0"
   },
   "private": true
 }
