--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-api",
   "version": "1.0.0",
-  "exports": "./lib/index.js",
+  "main": "./lib/index.js",
   "type": "module",
   "scripts": {
     "lint": "npx eslint .",
@@ -15,31 +15,29 @@
   "engines": {
     "node": "20"
   },
-  "main": "lib/index.js",
   "dependencies": {
     "celebrate": "^15.0.3",
     "cpf-cnpj-validator": "^1.0.3",
-    "dayjs": "^1.11.19",
-    "express": "^5.1.0",
+    "dayjs": "^1.11.13",
+    "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "file-type": "^21.1.1",
-    "firebase": "^12.7.0",
-    "firebase-admin": "^13.6.0",
-    "firebase-functions": "^7.0.2",
+    "file-type": "^19.5.0",
+    "firebase": "^10.13.1",
+    "firebase-admin": "^12.3.1",
+    "firebase-functions": "^5.0.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
-    "@types/express": "^5.0.5",
-    "@types/node": "^20.11.30",
-    "@types/swagger-ui-express": "^4.1.8",
-    "eslint": "^9.39.2",
-    "eslint-config-xo": "^0.49.0",
-    "firebase-functions-test": "^3.4.1",
-    "globals": "^17.0.0",
+    "@eslint/js": "^9.11.1",
+    "@types/eslint__js": "^8.42.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.4.1",
+    "@types/swagger-ui-express": "^4.1.7",
+    "eslint": "^9.11.1",
+    "firebase-functions-test": "^3.1.0",
     "swagger-autogen": "^2.23.7",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.51.0"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.8.0"
   },
   "private": true
 }
