--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,20 +1,21 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "target": "es2022",
+    "module": "CommonJS",
+    "target": "ES2022",
+    "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "rootDir": "src", // Diretório de códigos TypeScript
-    "outDir": "lib", // Diretório de saída para os arquivos compilados
-    "sourceMap": true, // Gera mapas de origem para facilitar o debug
-    "noImplicitAny": true, // Não permite declaração de variáveis ou parâmetros sem tipo
-    "noImplicitReturns": true, // Verifica se todas as funções possuem tipo de retorno informado
-    "noEmitOnError": true, // Não gera o código JS caso haja algum erro durante o processo de compilação
-    "strictNullChecks": true, // Força a verificação de valores null ou undefined
-    "noUnusedLocals": true, // Sinaliza quando existem variáveis declaradas e não utilizadas
+    "rootDir": "src",
+    "outDir": "lib",
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noEmitOnError": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
   "compileOnSave": true,
   "include": ["src/**/*"],
