--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-api",
+  "name": "e-commerce-api",
   "version": "1.0.0",
   "main": "./lib/index.js",
   "type": "module",
@@ -8,7 +8,7 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "swagger": "node swagger.js",
-    "start": "firebase emulators:start --only functions",
+    "start": "npm run lint && npm run swagger && firebase emulators:start --only functions",
     "deploy": "npm run lint && npm run swagger && npm run build && firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -24,7 +24,7 @@
     "file-type": "^19.5.0",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.3.1",
-    "firebase-functions": "^5.0.0",
+    "firebase-functions": "^7.0.2",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
